2005-10-24  Alan Coopersmith  <alan.coopersmith@sun.com>

	* src/Makefile.am: 
	Add -DOLDXAW to flags for building libXaw6 to disable features
	that are only supposed to be in the newer versions.

2005-10-21  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Add xext check.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-10-12  Alan Coopersmith  <alan.coopersmith@sun.com>

	* man/Makefile.am: 
	* configure.ac:
	Use sed to fill in variables in man page

2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am:
	Add old-doc files to EXTRA_DIST

	* include/Makefile.am:
	Add Template.c to install list

	* src/Makefile.am:
	Add sharedlib.c to EXTRA_DIST

	* Xaw6/Makefile.am:
	* Xaw7/Makefile.am:
	* Xaw8/Makefile.am:
	Remove the unneeded Makefile.am's

2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* include/.cvsignore:
	* man/.cvsignore:
	* src/.cvsignore:
	Add .cvsignore files
	
	* Makefile.am:
	* configure.ac:
	* src/Makefile.am:
	Build all three versions in src. Hack libtool to set SONAME in the
	libtool output to match old libXaw file names. Still missing is the
	creation of appropriate symlinks from libXaw.so.6 -> libXaw6.so.6 et
	al so that libraries not yet installed will work properly.

2005-01-22  Daniel Stone  <daniel@freedesktop.org>

	* configure.ac:
	Remove AC_CONFIG_AUX_DIR.

2004-05-10  Eric Anholt  <anholt@FreeBSD.org>

	* Makefile.am:
	* configure.ac:
	Link to libXpm as well.
	Bump to version 7.0.2.
	Properly include LIBS/CFLAGS in .pc and linking.

2004-04-13  Daniel Stone  <daniel@freedesktop.org>

	* TextSink.c:
	* Vendor.c:
	* Actions.c:
	* Text.c:
	* XawI18n.h:
	* Xaw.man:
	* include/X11/Xaw/XawInit.h:
	Sync with X11R6.7, including fixing a wrong number of arguments to
	XmuSnprintf, adding better Cygwin support, and cleaning up OLDXAW
	semantics.

	* Bump version to 7.0.1 for xlibs 1.0.1.
